plugins {
	id 'fabric-loom' version '1.13-SNAPSHOT'
	id 'maven-publish'

	id "com.matthewprenger.cursegradle" version "1.4.0"
	id "com.modrinth.minotaur" version "2.+"
}

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

repositories {
	maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
    maven {
        url 'https://central.sonatype.com/repository/maven-snapshots/'
        mavenContent { snapshotsOnly() }
    }
    maven { url 'https://repo.sleeping.town/' }
    maven { url 'https://jitpack.io' }
    maven { url 'https://maven.nucleoid.xyz' }
}

loom {
    splitEnvironmentSourceSets()

    mods {
        modid {
            sourceSet sourceSets.main
        }
    }
    runs {
        "client" {
            client()
            runDir = "run/client"
            ideConfigGenerated(true)
        }
        "server" {
            server()
            runDir = "run/server"
            ideConfigGenerated(true)
        }
    }
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.officialMojangMappings()
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    // provided by Config2Brigadier
    modImplementation('me.lucko:fabric-permissions-api:0.3.1')
    modImplementation include("com.github.samolego:Config2Brigadier:${project.config2brigadier_version}")
    modImplementation("net.kyori:adventure-platform-fabric:5.14.2") {
        exclude group: 'net.fabricmc.fabric-api', module: 'fabric-api-bom'
    }
    // modImplementation "net.kyori:adventure-platform-mod-shared:6.0.1"
    // modImplementation "net.kyori:adventure-platform-mod-shared-fabric-repack:6.0.1"
    // modImplementation "net.kyori:adventure-platform-mod-shared-fabric-repack:6.2.0"
    modImplementation "eu.pb4:placeholder-api:2.4.2+1.21"
    implementation "net.kyori:adventure-text-serializer-legacy:4.17.0"

    implementation 'folk.sisby:kaleido-config:0.3.3+1.3.2'
    include 'folk.sisby:kaleido-config:0.3.3+1.3.2'
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}" }
	}
}

def ENV = System.getenv()

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}


// from FAPI https://github.com/FabricMC/fabric/blob/1.16/build.gradle
curseforge {
	if (ENV.CURSEFORGE_API_KEY) {
		apiKey = ENV.CURSEFORGE_API_KEY
	}

	project {
		id = "817455"
		changelog = "A changelog can be found at https://github.com/samolego/AntiLogout/releases/tag/${version}"
		releaseType = "release"
		addGameVersion "${project.minecraft_version}"
		addGameVersion "Fabric"
		addGameVersion "Quilt"

		mainArtifact(file("${project.buildDir}/libs/${archivesBaseName}-${version}.jar")) {
			displayName = "[${project.minecraft_version}] AntiLogout ${version}"
		}

		afterEvaluate {
			uploadTask.dependsOn("remapJar")
		}
	}

	options {
		forgeGradleIntegration = false
	}
}


tasks.modrinth {
	onlyIf {
		ENV.MODRINTH_TOKEN
	}
}

modrinth {
	token = ENV.MODRINTH_TOKEN
	projectId = "gnfTfbZi"
	changelog = ENV.CHANGELOG ?: "A changelog can be found at https://github.com/samolego/AntiLogout/releases/tag/${version}"
	versionNumber = version
	versionName = "[${project.minecraft_version}] AntiLogout ${version}"
	versionType = "release"

	uploadFile = file("${project.buildDir}/libs/${archivesBaseName}-${version}.jar")

	gameVersions = [project.minecraft_version]
	loaders = ['fabric', 'quilt']

}